--- a/index.html
+++ b/index.html
@@ -8,15 +8,75 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+  <h1 class="portfolio__title">Portfolio</h1>
+  <div class="swiper-container bg-swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide bg-slide1">Slide 1</div>
+        <div class="swiper-slide bg-slide2">Slide 2</div>
+        <div class="swiper-slide bg-slide3">Slide 3</div>
+        <div class="swiper-slide bg-slide4">Slide 3</div>
+        <div class="swiper-slide bg-slide5">Slide 3</div>
+    </div>
+</div>
     <div class="swiper-container main-swiper">
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide main-slide1">
-            <a href="https://pushgive19.github.io/webrenewal">
-              삼천리 자전거
-            </a>
+            <!-- <a href="https://pushgive19.github.io/webrenewal"> -->
+              <div class="slide__content">
+                <div class="content__wrapper">
+                  <h2 class="slide__title">삼천리 자전거 리뉴얼</h2>
+                  <p class="slide__date">Date <span>6월 10일 ~ 10월 5일</span></p>
+                  <p class="slide__tool">Tools</p>
+                  <div class="slide__icons">
+                    <img src="images/photoshop icon.png" alt="">
+                    <img src="images/illustrator.png" alt="">
+                    <img src="images/vsc_icon.png" alt="">
+                    <img src="images/figma.png" alt="">
+                      <span>
+                        <a href="">
+                          이동
+                        </a>
+                      </span>
+                  </div>
+                </div>
+                <ul class="content__list">
+                  <li class="content__item">
+                    <a href="">
+                      삼천리 자전거<br/><span>index ></span> 
+                    </a>
+                  </li>
+                  <li class="content__item item__partition"></li>
+                  <li class="content__item">
+                    <a href="">
+                      신제품 소개<br/><span>제품 상세페이지 ></span>
+                    </a>
+                  </li>
+                  <li class="content__item item__partition"></li>
+                  <li class="content__item">
+                    <a href="">
+                      온라인 A/S<br/><span>layout ></span>
+                    </a>
+                  </li>
+                  <li class="content__item item__partition"></li>
+                  <li class="content__item">
+                    <a href="">
+
+                      대리점 찾기<br/><span>Kakao API ></span>
+                    </a>
+                  </li>
+                  <li class="content__item item__partition"></li>
+                  <li class="content__item">
+                    <a href="">
+                      Web style guide<br/><span>바로가기 ></span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            <!-- </a> -->
           </div>
           <div class="swiper-slide main-slide2">
             <a href="http://pushgive29.dothome.co.kr/">
