--- a/about_me.html
+++ b/about_me.html
@@ -11,7 +11,10 @@
     <h2 class="aboutme__title">About Me</h2>
     <div class="aboutme__container">
         <h2 class="portfolio__btn">
-          portfolio &nbsp;&#xE001;
+          <p>
+            portfolio
+          </p>
+          <span class="arrow">&#xE001;</span><span class="bar"></span>
         </h2>
       <div class="aboutme__profile">
         <img src="images/joon.jpg" alt="민준이사진" class="profile__img">
@@ -25,7 +28,7 @@
         </div>
         <div class="profile__github">
           <a href="">
-            <img src="images/github.png" alt="네이버 아이콘" class="github__icon">
+            <img src="images/github.png" alt="github 아이콘" class="github__icon">
             <p class="github__content">github &#xE001</p>
           </a>
         </div>
@@ -34,12 +37,12 @@
         <div class="content__intro">
           <h3 class="intro__title">안녕하세요!<br/>저는 김민준입니다.</h3>
           <p class="intro__detail"> 
-            &nbsp;&nbsp;유튜브에서 프론트앤드 개발자에대한 영상을 접하고, 강의를 들으며 카카오톡 클론 코딩을 해보았습니다.<br/>
+            &nbsp;&nbsp;유튜브에서 프론트앤드 개발자에관한 영상을 접하고, 강의를 들으며 카카오톡 클론 코딩을 해보았습니다.<br/>
             내 손으로 만든 결과물이 웹상에서 작동하는 것을 보며 짜릿함을 느끼게 되었고, 이후[uiux 웹 퍼블리셔]과정을 <br/>
             오프라인으로 4개월간 수강하였습니다. <br/>
             <br/>
             &nbsp;&nbsp;강의를 수료한 뒤 회사에서 하나의 온전한 프로젝트를 처음부터 끝까지 경험해보고 싶은 욕심이 생겼습니다. <br/>
-            신입의 자세로 팔로우십을 발휘하며 디테일을 챙기고, 일의 진행 과정을 배우겠습니다.
+            신입의 자세로 팔로우십을 발휘하며 디테일을 챙기고, 일이 진행되는 모습을 경험하고 싶습니다.
           </p>
         </div>
         <div class="content__skill">
@@ -111,8 +114,8 @@
                 github를 통한 publishing  경험
               </p>
             </li>
-            <li class="skill__item item__blind"></li>
-            <li class="skill__item item__blind"></li>
+            <!-- <li class="skill__item item__blind"></li>
+            <li class="skill__item item__blind"></li> -->
             <li class="skill__item">
               <p class="item__title">
                 Figma
