--- a/about_me.html
+++ b/about_me.html
@@ -7,27 +7,30 @@
  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <main class="aboutme">
+  <section class="aboutme">
     <h2 class="aboutme__title">About Me</h2>
     <div class="aboutme__container">
+      <a href="index.html">
+
         <h2 class="portfolio__btn">
           <p>
             portfolio
           </p>
           <span class="arrow">&#xE001;</span><span class="bar"></span>
         </h2>
+      </a>
       <div class="aboutme__profile">
         <img src="images/joon.jpg" alt="민준이사진" class="profile__img">
         <p class="profile__phone">phone<span>010-7469-4314</span></p>
         <p class="profile__email">email<span>kok013122@naver.com</span></p>
         <div class="profile__blog">
-          <a href="">
+          <a href="https://blog.naver.com/kok013122" target="_blank">
             <img src="images/naver.png" alt="네이버 아이콘" class="blog__icon">
             <p class="blog__content">네이버 블로그 &#xE001</p>
           </a>
         </div>
         <div class="profile__github">
-          <a href="">
+          <a href="https://github.com/pushgive19" target="_blank">
             <img src="images/github.png" alt="github 아이콘" class="github__icon">
             <p class="github__content">github &#xE001</p>
           </a>
@@ -38,7 +41,7 @@
           <h3 class="intro__title">안녕하세요!<br/>저는 김민준입니다.</h3>
           <p class="intro__detail"> 
             &nbsp;&nbsp;유튜브에서 프론트앤드 개발자에관한 영상을 접하고, 강의를 들으며 카카오톡 클론 코딩을 해보았습니다.<br/>
-            내 손으로 만든 결과물이 웹상에서 작동하는 것을 보며 짜릿함을 느끼게 되었고, 이후[uiux 웹 퍼블리셔]과정을 <br/>
+            내 손으로 만든 결과물이 웹상에서 작동하는 것을 보며 짜릿함을 느끼게 되었고, 이후 [uiux 디지털디자인 및 웹 퍼블리셔]<br/>과정을 
             오프라인으로 4개월간 수강하였습니다. <br/>
             <br/>
             &nbsp;&nbsp;강의를 수료한 뒤 회사에서 하나의 온전한 프로젝트를 처음부터 끝까지 경험해보고 싶은 욕심이 생겼습니다. <br/>
@@ -54,7 +57,7 @@
               </p>
               <p class="item__content">
                 적절한 sementic tag 사용<br/>
-                IR 기법에 대한 이해<br/>
+                <!-- IR 기법에 대한 이해<br/> -->
                 block 단위의 배치
               </p>
             </li>
@@ -76,7 +79,7 @@
               <p class="item__content">
                 vanilla js에 대한 지식<br/>
                 jQuery 기초 활용 가능<br/>
-                library doc을 참고해 활용 가능<br/>
+                구글링 초급 수준<br/>
               </p>
             </li>
             <li class="skill__item">
@@ -99,7 +102,7 @@
               </p>
               <p class="item__content">
                 vsc 활용해 portfolio제작<br/>
-                기본적인 shortcut, extension<br/>
+                많이 사용하는 shortcut, extension<br/>
                 활용 가능<br/>
               </p>
             </li>
@@ -109,8 +112,8 @@
                 <img src="images/github.png" alt="github 아이콘" class="item__img">
               </p>
               <p class="item__content">
-                개발자의 협업툴 github에대한<br/>
-                기초적인 지식<br/>
+                github branch, push<br/>
+                기초적인 지식 습득, 활용<br/>
                 github를 통한 publishing  경험
               </p>
             </li>
@@ -121,12 +124,12 @@
                 Figma
                 <img src="images/figma.png" alt="figma 아이콘" class="item__img">
               </p>
-              <p class="item__content">App prototype, style guide 제작</p>
+              <p class="item__content">prototype, style guide 제작</p>
             </li>
           </ul>
         </div>
       </div>
     </div>
-  </main>
+  </section>
 </body>
 </html>
