--- a/about_me.html
+++ b/about_me.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
  <link rel="stylesheet" href="css/styles.css">
+ <style>
+   body{
+     background-color:rgba(23, 23, 23, 0.9);
+   }
+ </style>
 </head>
 <body>
   <section class="aboutme">
